--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <title>My App</title>
 </head>
 
-<body>
+<body style="max-height: 100dvh; background-color: rgb(50, 50, 50);">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
