--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body style="max-height: 100dvh; background-color: rgb(50, 50, 50);">
+<!-- <body style="max-height: 100dvh; background-color: rgb(162, 162, 162);"> -->
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
